app/assets/stylesheets/bootstrap_and_overrides.css.scss
/* ... */
// search bars
.reset-search {
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
}

.search-query .form-control {
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
  width: 200px;
}

#order-footer {
  width: 100%;
  right: 0;
  left: 0;
}

.article-info {
  z-index: 4;
  width: 40em;
  height: 8em;
  border: none;
  left: 30px;

  .article-name {
    text-align: center;
    margin: 2px 0;
    margin-bottom: 5px;
    width: 100%;
    font-weight: bold;
  }
  .pull-right {
    width: 35%;
  }
  .pull-left {
    width: 60%;
  }
}

tr.order-article .article-info {
  display: none;

  .close-btn {
    display: none;
    position: absolute;
    right: 10px;
    padding: 0;
  }
}

@media (pointer: coarse) {
  tr.order-article:focus-within .article-info {
    display: block;

    .close-btn {
      display: block;
    }
  }
}

@media (pointer: fine) {
  tr.order-article:hover .article-info {
    display: block;
  }
}

@media only screen and (max-width: 950px) {
  .article-info {
    box-shadow: 10px 11px 5px 0px rgba(104,153,70,0.15);
    margin-bottom: 5px;
    border: 1px solid rgb(104,153,70);
    padding: 2px;
  }
}

tr.order-article {
  .group-order-unit {
    white-space: nowrap;
  }


  .used-unused, .used-unused-tolerance {
    width: 70px;
    text-wrap: nowrap;
  }

  .group-order-input:not(.stock-order) {
    .goa-quantity, .goa-tolerance {
      width: 65px;
      text-align: right;
      font-size: 14px;
      padding: 4px 6px;
      appearance: textfield;

      &::-webkit-inner-spin-button {
        -webkit-appearance: none;
      }
    }
  }

  .group-order-input.stock-order {
    width: 50px;
  }
}

.quantity .btn-ordering, .tolerance .btn-ordering {
    padding: 4px 8px !important;
    font-size: 10px !important;
}

.units_received_cell {
  display: flex;
  align-items: center;
  gap: 12px;
  width: auto;

  .btn-group .btn-ordering {
    margin-top: 0;
    width: 100px;
  }

  input.units_received {
    width: 75px;
    -moz-appearance: textfield;
    border-top-right-radius: 0 !important;
    border-bottom-right-radius: 0 !important;
    &::-webkit-inner-spin-button {
      -webkit-appearance: none;
    }
  }
}


// ********* Articles

tr.just-updated {
  color: $articleUpdatedColor;
}

tr.unavailable {
  color: $articleUnavailColor;
}

// articles edit all
.field_with_errors {
  input, select {
    border-color: red;
  }
}

// editable article list can be more compact
.ordered-articles input {
  margin-bottom: 0;
}

// allow content to appear without sudden table change (receive)
.units_delta {
  min-width: 3.5em;
}

// small cells with just a 'x' or '='
td.symbol, th.symbol {
  padding-left: 0;
  padding-right: 0;
  text-align: center;
}
.symbol              { color: tint($text-color, $nonessentialDim); }
.used        .symbol { color: tint($articleUsedColor, $nonessentialDim); }
.unused      .symbol { color: tint($articleUnusedColor, $nonessentialDim); }
.partused    .symbol { color: tint($articlePartusedColor, $nonessentialDim); }
.unavailable .symbol { color: $articleUnavailColor; }

.article-form {
  .glyphicon-warning-sign {
    margin-top: 8px;
    margin-left: 10px;
    color: $articleCustomUnitWarning;
  }

  input[type=number]::-webkit-outer-spin-button,
  input[type=number]::-webkit-inner-spin-button {
    -webkit-appearance: none;
    margin: 0;
  }

  /* Firefox */
  input[type=number] {
    -moz-appearance: textfield;
  }
}


// hide symbols completely on small screens to save space
@media (max-width: 768px) {
  .symbol {
    font-size: 0;
    padding: 0;
    margin: 0;
  }
}

// ********* Article units
tr.untranslated {
  color: $unitUntranslatedColor;
}


// ********* Tweaks & fixes

// Fix bootstrap dropdown menu on mobile
// https://github.com/twbs/bootstrap/issues/4550#issuecomment-31916049
.dropdown-backdrop { position: static; }

.dl-horizontal {
  dt { width: 200px; margin-bottom: 0.2em; }
  dd { margin-left: 210px; }
}

// get rid of extra bottom margin inside well
.well p:last-child {
  margin-bottom: 0;
}

// center table rows vertically (including form elements)
table.table {
  thead, tbody, tfoot > {
    tr > {
      td, th {
        vertical-align: middle;
      }
    }
  }

  select, textarea, input, .uneditable-input
  {
    margin-bottom: 0;
    margin-top: 0;
  }
}

.settings {
  .settings-group {
    margin-bottom: 10px;
    .control-label {
      margin: 5px 0 0 0;

    }
  }
  .control-group {
    margin-bottom: 5px;
  }
  .control-group.h_wrapper {
    margin-bottom: 5px;
  }
  .control-group.select {
    margin-bottom: 15px
  }
}

// inline (boolean) position after/before heading
label {
  h1, h2, h3, h4 {
    input[type=checkbox] {
      margin: auto 0.3em auto 0.3em;
    }
  }
}
// fix checkbox form height
.controls > label.checkbox { margin-top: 5px; }
.settings-group .controls > label.checkbox { margin-top: 0; }


// it's a bit distracting
.glyphicon-asterisk {
  font-size: 80%;
  vertical-align: middle;
  padding-bottom: 0.4ex;
}


// inline form elements
.inline {
  display: inline;
}

// show package icon after amount of wholesale units
@mixin package-image($align){
  background-image: image-url('package-bg.png');
  background-repeat: no-repeat;
  background-position: $align center;
}
input.package {
  @include package-image(90%);
  background-size: 15px 15px;
  // disabled and readonly definitions though
  &[disabled], &[readonly] {
    background-color: $input-bg-disabled;
  }
}
i.package {
  @include package-image(left);
  min-width: 18px;
  min-height: 18px;
  vertical-align: baseline;
  font-style: normal;
  padding-left: 20px;
  @media (max-width: 979px) { padding-left: 0; }
}
i.package.icon-only {
  padding-left: 6px;
  background-position: right;
  display: inline-block;
}
.package              { color: tint($text-color, $nonessentialDim); }
.used        .package { color: tint($articleUsedColor, $nonessentialDim); }
.unused      .package { color: tint($articleUnusedColor, $nonessentialDim); }
/* ... */

